--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <title>Local API - Ajax</title>
+  <title>Local API - Express</title>
 </head>
 <body>
   <div class="container">
@@ -21,12 +21,17 @@
   <div class="container">
     <div id="friends-list">
       <h2>Listed Friends</h2>
-      <div id="list"></div>
+      <div id="list">
+        {{#each friendsList}}
+          <div class="friend">
+            <button class="delete btn">x</button>
+            <div class="friend-data">{{ name }}</div>
+            <div class="friend-data">{{ age }}</div>
+            <button class="update btn">update</button>
+          </div>
+        {{/each}}
+      </div>
     </div>
   </div>
-  
-  <script src="./CRUD.js"></script>
-  <script src="./UI.js"></script>
-  <script src="./app.js"></script>
 </body>
 </html>
